--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2331,6 +2331,8 @@ div.jp-audio{
 }
 .preVideoImg img{
     float: left;
+    height: 349px;
+    width: 620px;
 }
 .preVideoImg .videotitles{
     float: right;
