removed extra css style

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2371,10 +2371,10 @@ div.jp-audio{
 .transcript-content{
     width: 605px;
 }
-.audioSection .preVideoImg img{
-    width: 620px;
-    height: 349px;
-}
+// .audioSection .preVideoImg img{
+//     width: 620px;
+//     height: 349px;
+// }
 .bookmark {
     float: right;
     width: 140px;
