updated background button

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1589,7 +1589,13 @@ h3 {
     // @include icon-sprite("become_member_button");
     width: auto;
     height: 29px;
-    display: inline-block;   
+    display: inline-block; 
+    background: #262323;
+    border-radius: 4px;
+    display: inline-block;
+    height: 29px;
+    margin-top: -5px;
+    padding: 5px 10px;
 }
 .buttonMember a{
     text-align: center;
