--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1590,7 +1590,7 @@ h3 {
     width: auto;
     height: 29px;
     display: inline-block; 
-    background: #262323;
+    background: #34a2c3;
     border-radius: 4px;
     display: inline-block;
     height: 29px;
