--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2074,7 +2074,7 @@ h3 a {
   width: auto;
   height: 29px;
   display: inline-block;
-  background: #262323;
+  background: #34a2c3;
   border-radius: 4px;
   display: inline-block;
   height: 29px;
