test to fix the filter floating on scroll

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2439,13 +2439,13 @@ div.jp-audio{
   padding-bottom:10px!important;
 }
 .teachingsBarInnerWrapper{
-    max-width: 1580px;
-    min-width: 940px;
+    // max-width: 1580px;
+    // min-width: 940px;
     margin: auto;
 }
 .scrollingTitle .teachingsBarInnerWrapper,
 .scrollingFilter .teachingsBarInnerWrapper{
-	width:auto!important;
+	// width:auto!important;
 }
 
 
