added space when scrolling the filter.

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2447,7 +2447,9 @@ div.jp-audio{
 .scrollingFilter .teachingsBarInnerWrapper{
 	// width:auto!important;
 }
-
+#teachingsSectionHeaderBar .scrollingFilter{
+  padding-top:10px;
+}
 
 /**end scrollling filter**/
 
