--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2410,23 +2410,12 @@ div.jp-audio{
     z-index: 1400 !important;
 }
 @media only screen and (max-width: 1000px){
-	.scrollingTitle{
-		padding-left: 20px!important;
-	}
-}
-@media only screen and (min-width: 1000px){
-	.scrollingFilter{
+	.scrollingTitle,.scrollingFilter{
 		padding-left: 0px!important;
 	}
 }
-// @media screen and (min-width: 980px){
-//   #outerMenu ul li{
-//     margin: 0 3px;
-//   }
-//   #outerMenu ul li a{
-//     font-size: 13px;
-//   }
-// }
+
+
 .scrollingFilter,.scrollingTermDesc,.scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
     position: fixed !important;
