--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3187,6 +3187,7 @@ div.jp-audio {
 .scrollingFilter {
   padding-top: 10px;
   padding-bottom: 10px !important;
+  padding-left: 0px !important;
 }
 
 /**end scrollling filter**/
@@ -3564,7 +3565,7 @@ a.close-tip {
 }
 
 /**agenda**/
-/* line 2447, ../sass/style.scss */
+/* line 2448, ../sass/style.scss */
 #classAgenda th {
   background: none repeat scroll 0 0 #F5F5F5;
   border: medium none;
@@ -3577,24 +3578,24 @@ a.close-tip {
   text-transform: uppercase;
 }
 
-/* line 2459, ../sass/style.scss */
+/* line 2460, ../sass/style.scss */
 #classAgenda th:nth-child(1),
 #classAgenda td:nth-child(1) {
   padding-left: 13px;
 }
 
-/* line 2462, ../sass/style.scss */
+/* line 2463, ../sass/style.scss */
 #classAgenda table {
   width: 96.5%;
   margin-bottom: 20px;
 }
 
-/* line 2466, ../sass/style.scss */
+/* line 2467, ../sass/style.scss */
 #classAgenda tbody {
   border: none;
 }
 
-/* line 2469, ../sass/style.scss */
+/* line 2470, ../sass/style.scss */
 #classAgenda table td {
   color: #433a3a;
   font-family: "ProxiLight";
@@ -3605,7 +3606,7 @@ a.close-tip {
 }
 
 /**search page**/
-/* line 2483, ../sass/style.scss */
+/* line 2484, ../sass/style.scss */
 #edit-field-author-tid-wrapper,
 #edit-field-portion-tid-wrapper,
 #edit-field-secondary-topic-tid-wrapper,
@@ -3613,26 +3614,26 @@ a.close-tip {
   float: left !important;
 }
 
-/* line 2486, ../sass/style.scss */
+/* line 2487, ../sass/style.scss */
 #views-exposed-form-search-page span.lessonsCourse {
   display: block;
 }
 
-/* line 2489, ../sass/style.scss */
+/* line 2490, ../sass/style.scss */
 #edit-field-author-tid-wrapper {
   margin-right: 10px;
 }
 
-/* line 2492, ../sass/style.scss */
+/* line 2493, ../sass/style.scss */
 #views-exposed-form-search-page label {
   display: inline;
 }
 
-/* line 2495, ../sass/style.scss */
+/* line 2496, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper {
   margin-left: 0;
 }
-/* line 2497, ../sass/style.scss */
+/* line 2498, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper label {
   color: #999999;
   font-size: 14px;
@@ -3641,12 +3642,12 @@ a.close-tip {
   text-align: left;
   text-transform: capitalize;
 }
-/* line 2505, ../sass/style.scss */
+/* line 2506, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper input {
   margin-top: 0;
 }
 
-/* line 2509, ../sass/style.scss */
+/* line 2510, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li {
   display: inline;
   color: #433A3A;
@@ -3654,24 +3655,24 @@ a.close-tip {
   margin-bottom: -1px;
 }
 
-/* line 2515, ../sass/style.scss */
+/* line 2516, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li.active {
   background: url("../images/small_tab.png") no-repeat scroll center bottom rgba(0, 0, 0, 0);
   display: inline-block;
   height: 41px;
 }
-/* line 2519, ../sass/style.scss */
+/* line 2520, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li.active a {
   color: #9C1F19;
 }
 
-/* line 2524, ../sass/style.scss */
+/* line 2525, ../sass/style.scss */
 ul.quicktabs-tabs.quicktabs-style-zen {
   border-bottom: 1px solid #CCC;
   margin-bottom: 20px;
 }
 
-/* line 2529, ../sass/style.scss */
+/* line 2530, ../sass/style.scss */
 .quicktabs-tabpage .quicktabs-views-group {
   float: left;
   height: 170px;
@@ -3680,13 +3681,13 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   width: 300px;
 }
 
-/* line 2536, ../sass/style.scss */
+/* line 2537, ../sass/style.scss */
 .views-exposed-widget.views-submit-button {
   float: left !important;
   margin-left: 10px;
 }
 
-/* line 2540, ../sass/style.scss */
+/* line 2541, ../sass/style.scss */
 #views-exposed-form-search-page input.form-submit {
   background: none repeat scroll 0 0 #328A9A;
   border: medium none;
@@ -3702,39 +3703,39 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 }
 
 /***custom ccarousel for search page***/
-/* line 2554, ../sass/style.scss */
+/* line 2555, ../sass/style.scss */
 .quicktabs-views-group .imagesCont {
   position: relative;
 }
 
-/* line 2557, ../sass/style.scss */
+/* line 2558, ../sass/style.scss */
 .quicktabs-views-group .imagesCont img {
   float: none;
 }
 
-/* line 2560, ../sass/style.scss */
+/* line 2561, ../sass/style.scss */
 .quicktabs-views-group .theDescCont {
   position: absolute;
   bottom: 0px;
 }
 
-/* line 2564, ../sass/style.scss */
+/* line 2565, ../sass/style.scss */
 .quicktabs-views-group .theTeaser {
   display: none;
 }
 
-/* line 2567, ../sass/style.scss */
+/* line 2568, ../sass/style.scss */
 .quicktabs_main {
   float: left;
   margin-bottom: 50px;
 }
 
-/* line 2571, ../sass/style.scss */
+/* line 2572, ../sass/style.scss */
 #views-exposed-form-search-page .views-widget {
   margin-top: 2px;
 }
 
-/* line 2574, ../sass/style.scss */
+/* line 2575, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper .views-widget {
   margin-top: 0px;
 }
