--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2436,6 +2436,7 @@ div.jp-audio{
 .scrollingFilter{
   padding-top:10px;
   padding-bottom:10px!important;
+  padding-left:0px!important;
 }
 
 /**end scrollling filter**/
