--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2575,3 +2575,12 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 #views-exposed-form-search-page #edit-title-wrapper .views-widget {
     margin-top: 0px;
 }
+/**style for karen page**/
+
+.field-item.even img {
+    float: left;
+}
+.fontBold {
+    font-family: "ProxiRegular";
+    font-weight: bold;
+}
