center the title for karen page

--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3751,3 +3751,8 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   font-family: "ProxiRegular";
   font-weight: bold;
 }
+
+/* line 2587, ../sass/style.scss */
+.page-node-5825 #page-title {
+  text-align: center;
+}
