--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2584,3 +2584,6 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     font-family: "ProxiRegular";
     font-weight: bold;
 }
+.page-node-5825 #page-title {
+    text-align: center;
+}
