--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2605,5 +2605,5 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     left: 1px;
     position: relative;
     top: -1px !important;
-    box-shadow: 1px 0 2px 2px #525252;
+    box-shadow: 1px 0 2px 2px #bebebe;
 }
