--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2587,6 +2587,9 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 .page-node-5825 #page-title {
     text-align: center;
 }
+.page-node-5831 #page-title {
+    text-align: center;
+}
 /********added style for the support tap*************/
 .ZenboxTabRight{
     bottom: 10%;
