--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2610,3 +2610,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     top: -1px !important;
     box-shadow: 1px 0 2px 2px #bebebe;
 }
+.page-node-5824 .sharethis {
+    border-top: none;
+    padding-top:22px;
+}
