--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3785,3 +3785,9 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   top: -1px !important;
   box-shadow: 1px 0 2px 2px #bebebe;
 }
+
+/* line 2613, ../sass/style.scss */
+.page-node-5824 .sharethis {
+  border-top: none;
+  padding-top: 22px;
+}
