cleaning up css

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2600,7 +2600,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     -o-transform: rotate(-90deg);
     -ms-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    -webkit-box-shadow: 2px 2px 2px 2px #525252; 
+    // -webkit-box-shadow: 2px 2px 2px 2px #525252; 
 }
 #zenbox_tab img{
     background: none repeat scroll 0 0 #000000;
