--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 // ==========================================================================
 //  Maintainable CSS With Sass and Compass
 //  =========================================================================
