added style for live events page

--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3576,26 +3576,28 @@ a.close-tip {
   line-height: 20px;
   text-align: left;
   text-transform: uppercase;
+  padding-left: 70px;
 }
 
-/* line 2461, ../sass/style.scss */
+/* line 2462, ../sass/style.scss */
 #classAgenda th:nth-child(1),
 #classAgenda td:nth-child(1) {
   padding-left: 13px;
+  width: 30%;
 }
 
-/* line 2464, ../sass/style.scss */
+/* line 2466, ../sass/style.scss */
 #classAgenda table {
   width: 96.5%;
   margin-bottom: 20px;
 }
 
-/* line 2468, ../sass/style.scss */
+/* line 2470, ../sass/style.scss */
 #classAgenda tbody {
   border: none;
 }
 
-/* line 2471, ../sass/style.scss */
+/* line 2473, ../sass/style.scss */
 #classAgenda table td {
   color: #433a3a;
   font-family: "ProxiLight";
@@ -3603,10 +3605,11 @@ a.close-tip {
   height: 28px;
   line-height: 30px;
   text-align: left;
+  padding-left: 70px;
 }
 
 /**search page**/
-/* line 2485, ../sass/style.scss */
+/* line 2488, ../sass/style.scss */
 #edit-field-author-tid-wrapper,
 #edit-field-portion-tid-wrapper,
 #edit-field-secondary-topic-tid-wrapper,
@@ -3614,26 +3617,26 @@ a.close-tip {
   float: left !important;
 }
 
-/* line 2488, ../sass/style.scss */
+/* line 2491, ../sass/style.scss */
 #views-exposed-form-search-page span.lessonsCourse {
   display: block;
 }
 
-/* line 2491, ../sass/style.scss */
+/* line 2494, ../sass/style.scss */
 #edit-field-author-tid-wrapper {
   margin-right: 10px;
 }
 
-/* line 2494, ../sass/style.scss */
+/* line 2497, ../sass/style.scss */
 #views-exposed-form-search-page label {
   display: inline;
 }
 
-/* line 2497, ../sass/style.scss */
+/* line 2500, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper {
   margin-left: 0;
 }
-/* line 2499, ../sass/style.scss */
+/* line 2502, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper label {
   color: #999999;
   font-size: 14px;
@@ -3642,12 +3645,12 @@ a.close-tip {
   text-align: left;
   text-transform: capitalize;
 }
-/* line 2507, ../sass/style.scss */
+/* line 2510, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper input {
   margin-top: 0;
 }
 
-/* line 2511, ../sass/style.scss */
+/* line 2514, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li {
   display: inline;
   color: #433A3A;
@@ -3655,24 +3658,24 @@ a.close-tip {
   margin-bottom: -1px;
 }
 
-/* line 2517, ../sass/style.scss */
+/* line 2520, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li.active {
   background: url("../images/small_tab.png") no-repeat scroll center bottom rgba(0, 0, 0, 0);
   display: inline-block;
   height: 41px;
 }
-/* line 2521, ../sass/style.scss */
+/* line 2524, ../sass/style.scss */
 .quicktabs-tabs.quicktabs-style-zen > li.active a {
   color: #9C1F19;
 }
 
-/* line 2526, ../sass/style.scss */
+/* line 2529, ../sass/style.scss */
 ul.quicktabs-tabs.quicktabs-style-zen {
   border-bottom: 1px solid #CCC;
   margin-bottom: 20px;
 }
 
-/* line 2531, ../sass/style.scss */
+/* line 2534, ../sass/style.scss */
 .quicktabs-tabpage .quicktabs-views-group {
   float: left;
   height: 170px;
@@ -3681,13 +3684,13 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   width: 300px;
 }
 
-/* line 2538, ../sass/style.scss */
+/* line 2541, ../sass/style.scss */
 .views-exposed-widget.views-submit-button {
   float: left !important;
   margin-left: 10px;
 }
 
-/* line 2542, ../sass/style.scss */
+/* line 2545, ../sass/style.scss */
 #views-exposed-form-search-page input.form-submit {
   background: none repeat scroll 0 0 #328A9A;
   border: medium none;
@@ -3703,67 +3706,67 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 }
 
 /***custom ccarousel for search page***/
-/* line 2556, ../sass/style.scss */
+/* line 2559, ../sass/style.scss */
 .quicktabs-views-group .imagesCont {
   position: relative;
 }
 
-/* line 2559, ../sass/style.scss */
+/* line 2562, ../sass/style.scss */
 .quicktabs-views-group .imagesCont img {
   float: none;
 }
 
-/* line 2562, ../sass/style.scss */
+/* line 2565, ../sass/style.scss */
 .quicktabs-views-group .theDescCont {
   position: absolute;
   bottom: 0px;
 }
 
-/* line 2566, ../sass/style.scss */
+/* line 2569, ../sass/style.scss */
 .quicktabs-views-group .theTeaser {
   display: none;
 }
 
-/* line 2569, ../sass/style.scss */
+/* line 2572, ../sass/style.scss */
 .quicktabs_main {
   float: left;
   margin-bottom: 50px;
 }
 
-/* line 2573, ../sass/style.scss */
+/* line 2576, ../sass/style.scss */
 #views-exposed-form-search-page .views-widget {
   margin-top: 2px;
 }
 
-/* line 2576, ../sass/style.scss */
+/* line 2579, ../sass/style.scss */
 #views-exposed-form-search-page #edit-title-wrapper .views-widget {
   margin-top: 0px;
 }
 
 /**style for karen page**/
-/* line 2581, ../sass/style.scss */
+/* line 2584, ../sass/style.scss */
 .field-item.even img {
   float: left;
 }
 
-/* line 2584, ../sass/style.scss */
+/* line 2587, ../sass/style.scss */
 .fontBold {
   font-family: "ProxiRegular";
   font-weight: bold;
 }
 
-/* line 2588, ../sass/style.scss */
+/* line 2591, ../sass/style.scss */
 .page-node-5825 #page-title {
   text-align: center;
 }
 
-/* line 2591, ../sass/style.scss */
+/* line 2594, ../sass/style.scss */
 .page-node-5831 #page-title {
   text-align: center;
 }
 
 /********added style for the support tap*************/
-/* line 2595, ../sass/style.scss */
+/* line 2598, ../sass/style.scss */
 .ZenboxTabRight {
   bottom: 10%;
   right: 94px !important;
@@ -3775,7 +3778,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   transform: rotate(-90deg);
 }
 
-/* line 2606, ../sass/style.scss */
+/* line 2609, ../sass/style.scss */
 #zenbox_tab img {
   background: none repeat scroll 0 0 #000000;
   border-right: 2px solid #FFFFFF;
@@ -3785,7 +3788,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
   box-shadow: 1px 0 2px 2px #bebebe;
 }
 
-/* line 2614, ../sass/style.scss */
+/* line 2617, ../sass/style.scss */
 .page-node-5824 .sharethis {
   border-top: none;
   padding-top: 22px;
