--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2478,6 +2478,7 @@ div.jp-audio{
     line-height: 30px;
     text-align: left;
     padding-left:70px;
+    vertical-align: top;
 }
 
 /**search page**/
